# ChangeLog for sys-block/compcache-tools
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  10 Oct 2010; Martin Väth <martin@mvath.de>
  Bump to 0.6.2. Add init.d/conf.d files.

  04 Jan 2010; Russell Harmon (eatnumber1) <russ@eatnumber1.com>
  New ebuild for bug 299664. Thanks to Russell Harmon