@@ -1,7 +1,7 @@
 AUX compcache-tools-cc.patch 327 RMD160 c802f33b2baa54e7428c9ace8f103c23e4d7b0eb SHA1 01e05e6b25b6f79d2b413f3988f0ac2d3c0a1f55 SHA256 fb9b768d386b5b2fed3ad0efa92542f6bb717de9cfcb08e53a847ecba05a8887
 AUX compcache.confd 806 RMD160 62cda7d7922a3bce9d16e71c9d4de46470ce7da8 SHA1 5f8684b242e80e75255869d6caae1cfb3e9dfe65 SHA256 cedb1a7ed1a5c58f149746cd8b80b2800795b1d304a0b4088d561e5a52072abb
-AUX compcache.initd 1794 RMD160 011d113c3296c68b7ebefefd9f5539de0e8643f7 SHA1 69cecb788b8b07d3941e1b974c4f0437d42ac679 SHA256 81bfd2f559592e1ab3b72f6f82c69902381a56852e2c3d4b5d5898de8f323165
+AUX compcache.initd 1764 RMD160 4094bd21c4f5bafdcb226ae007bdacf134547e9d SHA1 f58c45179e31914def94951311bdbb4eb84aa806 SHA256 67c3bc840d04556a59effd9e58c8a8ebd9015f3d6e4e72a34bf60dc312c45ebf
 DIST compcache-0.6.2.tar.gz 26618 RMD160 495f1fcd76f9585192327d33ab2f6f667b611c6c SHA1 d2844aff60517c93477031df0705553f1ee7e743 SHA256 969e39aa08c3c65fe104777156caef3e9c58fc87720d45801a6dce04745abac3
-EBUILD compcache-tools-0.6.2.ebuild 928 RMD160 87129e7d425f05b498217e9b14ea9d2cac03e6f9 SHA1 e1b765ef18e0d738c86cca2d6b8f7bd2b701e99c SHA256 112c7767615fd1d2e6700e77d890910d83474c86c8462b95649b1fa24a2ae10a
-MISC ChangeLog 351 RMD160 0986dfe2786bf8d3c376479d94655affd6840888 SHA1 38498adab0cc477cd45f43b7c8e56300e5c53cae SHA256 36e40dc62d69ed2e404809c51700e1133d04c2ab9084342199f2a13bb6b31472
+EBUILD compcache-tools-0.6.2-r1.ebuild 928 RMD160 87129e7d425f05b498217e9b14ea9d2cac03e6f9 SHA1 e1b765ef18e0d738c86cca2d6b8f7bd2b701e99c SHA256 112c7767615fd1d2e6700e77d890910d83474c86c8462b95649b1fa24a2ae10a
+MISC ChangeLog 489 RMD160 1ac0f487a0c69f71054cbcfe32354a941649b33c SHA1 f596b928d0812401130aba646ff0611bb008abc7 SHA256 a368c07ce8d02cc6314208da108d97d0dab80d08a457feced8f74078a38506ca
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
