@@ -1,3 +1,3 @@
-EBUILD aufs2-99999999.ebuild 3908 RMD160 a5209236317c45509cba809f02296e651e2fd579 SHA1 4bda361d992d9b0fd326acf5e1d660c94110fd73 SHA256 3388be69e6208018f6fef208d44fa42f016fe5b8a6ab13c4aca509220e9ee0d9
-MISC ChangeLog 1137 RMD160 9bcc019bfc741067d64aee92bc19476c2c55c86f SHA1 7b7281d903a6951b79cee6ee2b2f60b97a4f3121 SHA256 443d29f4384c6585a8931f9e4be722920940630f7d91fd137b6cbd6d74940932
+EBUILD aufs2-99999999.ebuild 3976 RMD160 ed28d72dda0cd3c873f6a7e84eee2ecc766c2b99 SHA1 d4e31085a37ec043bf93b09f4a417d633231b054 SHA256 7a78281d5d54c3346292c933967fe1ab9a1224de395bbcb125420f0dbfdf87cc
+MISC ChangeLog 1316 RMD160 f3dc590441c43da9e4dc71d0a9798f815688a18d SHA1 5bd0523283ab0d9f1508682da68aac881eca3c17 SHA256 a9253d56b16cfa8c645ccc8b44cd579105981d706f08a4e3256d88a0a2a81768
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
