@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+  21 Nov 2010; Martin Väth <martin@mvath.de>
+  Default to aufs2.1. Do not install broken Kbuild files.
+  Call epatch only once with collected list of patches.
+
   23 Aug 2010; Martin Väth <martin@mvath.de>
   Fix treatment of EGIT_PRUNE. Bump EAPI.
 
